# electricity_invoice_generator

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/data/: hourly_time_blocks.csv  seasons_range.csv  supplier_info.csv
alembic/versions/: 0331d38997aa_add_invoice_data.py  2025_09_08_2036-abf0be0b2e47_add_invoice_data.py  2025_09_08_2037-3bb0acdd7998_add_customers_and_supplier.py  2025_09_08_2038-fa105b85ec97_create_electricity_seasons_config.py  2025_09_08_2116-e2dc09a8d572_add_hourly_block_levels.py  2025_09_08_2307-d321542a9c22_add_mesurements_electricity_usage.py  2025_09_08_2344-83172ebf2d6c_add_mesurements_electricity_usage.py  2025_09_08_2349-d6708c592cb1_add_mesurements_electricity_usage.py  2025_09_08_2352-a81066a32763_insert_supplier_data.py  2025_09_09_1513-dc6f1d82e9d2_insert_electricity_seasons_config.py  2025_09_09_1525-4585778264d6_insert_hourly_blocks_levels_config.py  2025_09_10_2059-bb8e4e337e8f_added_invoice_field_total_quantity.py  262a20992637_create_electricity_seasons_config.py  3dbfa2496102_add_customers_suppliers.py  5c4966100c14_add_customers_and_supplier.py
app/: main.py
app/database/: mixins.py  session.py
app/database/models/: configuration.py  customer.py  invoice.py  measurement.py  measurements.py
app/endpoints/: customers.py  invoices.py  measurements.py  providers.py
app/schema/: custom_type.py  customer.py  invoice.py  measurement.py  provider.py
app/utils/: invoice.py  serialization.py
templates/: electricity_invoice.html
