[project]
name = "electrical-invoice-calculator"
version = "0.1.0"
description = "Electrical invoice calculator assigment."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.43",
    "structlog>=25.2.0",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.3.5", "pytest-cov>=6.1.1", "ruff>=0.11.6"]
